src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidTargetTypeInExplicitStyle.xaml
<DockPanel
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <Button>
        <Button.Style>
            <Style TargetType="{x:Type TextBox}">
                <Setter Property="Height" Value="200" />
            </Style>
        </Button.Style>
        hi
    </Button>
</DockPanel>
